Make sure active element is always visible

--- a/extensions/amp-autocomplete/0.1/amp-autocomplete.css
+++ b/extensions/amp-autocomplete/0.1/amp-autocomplete.css
@@ -46,6 +46,7 @@ amp-autocomplete > input {
 .i-amphtml-autocomplete-results-up {
   top: auto;
   bottom: 100%;
+  margin-bottom: .5rem; /* default-ui-space-small */
 }
 
 .i-amphtml-autocomplete-item {
